# git-split

./: LICENSE  README.md  graft-branch  split.sh
.github/: build.yml
.github/workflows/: build.yaml  build.yml
haskell/: AGENT.md  BRANCH_README  CHANGELOG.md  Main.hs  TODO  git-split.cabal
haskell/exe/: Main.hs
haskell/lib/: GitSplit.hs
haskell/test/: Main.hs
