cabal-version:      3.0
name:               git-split
version:            0.0.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         tom-git@jaguarpaw.co.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common defaults
    ghc-options: -Wall
    default-extensions:
      -- GHC2021
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      -- Not available until 9.2
      -- FieldSelectors
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
      NoExplicitNamespaces
      -- Others
      DataKinds
      DerivingStrategies
      GADTs
      LambdaCase

executable git-split
    import:           defaults
    default-extensions:
      NoImplicitPrelude
    main-is:          Main.hs
    build-depends:    git-split-lib
    hs-source-dirs:   exe
    default-language: Haskell2010

library git-split-lib
    import:           defaults
    exposed-modules:  GitSplit
    build-depends:    base ^>=4.18.3.0, bluefin, typed-process, bytestring
    hs-source-dirs:   lib
    default-language: Haskell2010
